Added link to html

--- a/testing/balloon_logs/logs.ipynb
+++ b/testing/balloon_logs/logs.ipynb
@@ -16,7 +16,8 @@
    "id": "26a3845c",
    "metadata": {},
    "source": [
-    "# Interact on web [here](https://nbviewer.org/github/eiharun/SP25-20/blob/main/testing/balloon_logs/logs.ipynb)"
+    "# Interact on web [here](https://nbviewer.org/github/eiharun/SP25-20/blob/main/testing/balloon_logs/logs.ipynb)\n",
+    "# View map [here](https://raw.githack.com/eiharun/SP25-20/refs/heads/main/testing/balloon_logs/testing-map.html)"
    ]
   },
   {
