--- a/testing/balloon_logs/logs.ipynb
+++ b/testing/balloon_logs/logs.ipynb
@@ -207,7 +207,7 @@
     "# Create a figure and axis\n",
     "fig, ax = plt.subplots(3, 1, figsize=(10, 15))\n",
     "# Set the title\n",
-    "fig.suptitle('Drone Data Analysis', fontsize=16)\n",
+    "fig.suptitle('Testing Data Analysis', fontsize=16)\n",
     "# Set the x-axis labels\n",
     "x_labels = list(locations.keys())\n",
     "x = np.arange(len(x_labels))\n",
